Fix vertical alignment of chatroom icons

--- a/indico/htdocs/sass/modules/_eventservices.scss
+++ b/indico/htdocs/sass/modules/_eventservices.scss
@@ -78,7 +78,8 @@ div.event-service-row {
 
             & > i:before {
                 font-size: 1.2em;
-                line-height: 2/1.2;
+                color: $black;
+                line-height: calc(2/1.2);
             }
 
             & > img {
